--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Synthetic Thought Institute</title>
-  <meta name="description" content="Research notes, tools, and publications from Synthetic Thought Institute." />
+  <title>Human Imagination + AI Execution</title>
+  <meta name="description" content="Synthetic Thought Institute." />
 
   <meta property="og:title" content="Synthetic Thought Institute" />
   <meta property="og:description" content="Research notes, tools, and publications from Synthetic Thought Institute." />
@@ -381,3 +381,4 @@
   </script>
 </body>
 </html>
+
