--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Human Imagination + AI Execution</title>
+  <title>Synthetic Thought Institute</title>
   <meta name="description" content="Synthetic Thought Institute." />
 
   <meta property="og:title" content="Synthetic Thought Institute" />
@@ -203,8 +203,8 @@
   <div class="wrap">
     <header>
       <div>
-        <div class="kicker">Synthetic Thought Institute</div>
-        <h1>Research, tools, and publications.</h1>
+        <div class="kicker">Human Imagination + AI Knowledge + Algorithmic Math</div>
+        <h1>Pushing the limits of Theoretical Physics</h1>
         <p class="sub">
           Public notes and artifacts. Reproducible where possible. Minimal claims, maximal traceability.
         </p>
@@ -381,4 +381,5 @@
   </script>
 </body>
 </html>
+
 
