--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
     <header>
       <div>
         <div class="kicker">Human Imagination + AI Knowledge + Algorithmic Math</div>
-        <h1>Pushing the limits of Theoretical Physics</h1>
+        <h1>Synthetic Thought Institute</h1>
         <p class="sub">
-          Public notes and artifacts. Reproducible where possible. Minimal claims, maximal traceability.
+          Pushing the limits of Theoretical Physics.
         </p>
 
         <div class="ctaRow">
@@ -381,5 +381,6 @@
   </script>
 </body>
 </html>
+
 
 
